plugins {
    id 'org.jetbrains.intellij' version '1.17.3'
    id 'java'
}

//https://plugins.jetbrains.com/plugin/22989-android/versions/stable
intellij {
    version = '2024.3.5'
    type = 'IC'
    plugins = ['org.jetbrains.android:243.25659.59', 'java', 'platform-images'] // Specify Android plugin with explicit version
    updateSinceUntilBuild = false
    downloadSources = !Boolean.valueOf(System.getenv('CI'))
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

version = '2025.1'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'commons-io:commons-io:2.18.0' // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation 'org.apache.commons:commons-math3:3.6.1' // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
    implementation 'org.apache.commons:commons-lang3:3.17.0' // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3

    implementation 'org.imgscalr:imgscalr-lib:4.2' // https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib
    implementation 'net.coobird:thumbnailator:0.4.20' // https://mvnrepository.com/artifact/net.coobird/thumbnailator
    implementation 'com.google.code.gson:gson:2.12.1' // https://mvnrepository.com/artifact/com.google.code.gson/gson
}
